# domain/model/favicon.go
@@ -1,7 +1,6 @@
 package model
 
 type Favicon struct {
-	DownloadUrl string `json:"downloadUrl"`
-	FileName    string `json:"fileName"`
-	ImageUrl    string `json:"imageUrl"`
+	Url      string `json:"url"`
+	FileName string `json:"fileName"`
 }
